[package]
name = "lahar"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2018"
description = "Futures support for Vulkan"
readme = "README.md"

[dependencies]
ash = "0.29"
futures-util = { version = "0.3.1", default-features = false, features = ["std", "async-await"] }
futures-channel = "0.3.1"
