[package]
name = "lahar"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2021"
description = "Vulkan helpers"
license = "Apache-2.0 OR Zlib"
repository = "https://github.com/Ralith/lahar"
readme = "README.md"

[dependencies]
ash = { version = "0.37", default-features = false }
