[package]
name = "lahar"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2021"
description = "Vulkan helpers"
license = "Apache-2.0 OR Zlib"
repository = "https://github.com/Ralith/lahar"
readme = "README.md"

[dependencies]
ash = { git = "https://github.com/ash-rs/ash", rev = "11647de8599e17142f87652ae2fd389ef74c894c", default-features = false }
